--- a/style.css
+++ b/style.css
@@ -8,8 +8,30 @@
 
 }
 body{
-    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    background-size: cover;
+    background-color: aliceblue;
+    overflow: scroll;
 }
+footer{
+    display: table;
+    width: 180px;
+    background-color: aliceblue;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+.footer-section{
+    color: darkgray;
+}
+.footer-section h5{
+    font-size: 14px;
+}
+.footer-section p{
+    font-size: 10px;
+}
+
 .container{
     width: 100%;
     min-height: 100vh;
@@ -201,4 +223,46 @@ button:hover{
         left: 61%;
         width: 110%;
     }
+}
+/* -- Banner Section -- */
+.banner{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./imgs/banner.jpg);
+    background-size: cover;
+    background-position: center center;
+    top: 100px;
+    height: 30vh;
+    width: 100%;
+}
+.banner h2{
+    padding-top: 5%;
+    font-size: 70px;
+    color: aliceblue;
+    margin-left: 8%;
+}
+
+
+/* -- About Section -- */
+.profile-section{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    margin: 100px 400px;
+}
+#profile-picture{
+    width: 400px;
+    height: 500px;
+    margin-right: 120px;
+}
+.intro h2{
+    margin: 0px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+.intro p{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    margin-bottom: 40px;
 }
