--- a/style.css
+++ b/style.css
@@ -266,3 +266,67 @@ button:hover{
     font-size: 18px;
     margin-bottom: 40px;
 }
+
+/* -- Skill Section --*/
+.skill-section{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    grid-gap: 1rem;
+    padding: 1rem 80px;
+    font-size: 1.2rem;
+}
+.skill-box{
+    padding: 1rem;
+    color: #ddd;
+    cursor: pointer;
+}
+
+.skill-box:hover{
+    transform: translateY(-10px);
+    transition: 0.5s;
+}
+.skill-title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+.skill-title h3{
+    color: cornflowerblue;
+    margin: 0.5rem;
+}
+.skill-box p{
+    font-size: 14px;
+    text-align: center;
+    margin-left: 5%;
+}
+.skill-img{
+    width: 180px;
+    height: 180px;
+    position: relative;
+    border-radius: 90px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.skill-icon{
+    width: 100px;
+    z-index: 2;
+}
+
+@media screen and (max-width: 990px){
+    .skill-section{
+        grid-template-columns: repeat(2, 1fr);
+        padding: 2rem 50px;
+    } 
+}
+@media screen and (max-width: 650px){
+    .skill-section{
+        grid-template-columns: 1fr;
+    } 
+}
